--- a/src/Presentational/ToDos/ToDo/ToDo.css
+++ b/src/Presentational/ToDos/ToDo/ToDo.css
@@ -1,29 +1,27 @@
 .outerList {
   text-align: left;
-  margin-bottom: 10px;
-}
-
-.group:after {
-  content: "";
-  display: table;
-  clear: both;
+  /* min-height: 58px; */
+  border-bottom: 1px solid #f5f5f5;
+  -webkit-padding-start: 40px;
+  padding: 10px 10px;
 }
 
 .circle {
   border-radius: 50%;
   width: 30px;
   height: 30px;
-  border: 1px solid black;
-  float: left;
+  border: 1px solid #ededed;
+  display: inline-block;
   margin-right: 10px;
-  margin-left: -10px;
+  /* margin-left: -10px; */
+  vertical-align: middle;
 }
 
 .listItem {
-  list-style: none;
+  list-style-type: none;
   font-size: 24px;
-  line-height: 29px;
+  line-height: 30px;
   color: #4d4d4d;
+  display: inline;
+  vertical-align: middle;
 }
-
-
